# bub-face

./: README.md  pyproject.toml
.github/workflows/: ci.yml
bub_face/: __init__.py  __main__.py  server.py  state.py
bub_face/static/: app.js  index.html  styles.css
src/bub_face/: __main__.py  plugin.py  server.py  state.py  terminal.py
src/bub_face/static/: app.js  styles.css
src/skills/emotion/: SKILL.md
tests/: test_state.py  test_terminal.py
